--- a/style.css
+++ b/style.css
@@ -38,7 +38,10 @@ body{
     font-weight: 500;
 }
 .top-navigation .links li:hover {
+	transition: color 0.5s ease;
     cursor: pointer;
     color: #333333;
 }
+
+
 
