--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
 body{
 	background-color: lightgrey;
+	font-family: 'Roboto', sans-serif;
+    -webkit-font-smoothing: antialiased;
 }
 
 .content{
-	box-sizing: border-box;
-	padding: 0 15px;
+    box-sizing: border-box;
+    padding: 0 15px;
+    width: 970px;
+    margin: 0 auto;
+    color: white;
 }
 
 /* Navigation Section */
@@ -12,9 +17,7 @@ body{
     background-color: #fff;
 }
 .top-navigation > .content {
-    width: 970px;
     height: 70px;
-    margin: 0 auto;
 }
 
 .top-navigation .logo {
@@ -23,7 +26,6 @@ body{
 
 .top-navigation .links {
     float: right;
-    font-family: 'Roboto', sans-serif;
     color: #838994;
     font-size: 16px;
     margin-top: 25px;
@@ -38,10 +40,57 @@ body{
     font-weight: 500;
 }
 .top-navigation .links li:hover {
-	transition: color 0.5s ease;
+    transition: color 0.5s ease;
     cursor: pointer;
     color: #333333;
 }
+
+/*
+Introduction section 
+*/
+
+.introduction{
+
+	background-image: url('first-background.jpg');
+  	background-size: cover;
+  	min-height: 600px;
+  	background-position: center bottom;
+ 	background-repeat: no-repeat;
+ 	overflow: auto;
+}
+
+.introduction h1, h3 
+{
+    text-align: center;
+    font-weight: 100;
+}
+
+.introduction h1
+{
+    margin-top: 4em;
+    font-size: 4em;
+}
+
+.introduction h3
+{
+    margin-top: .65rem;
+    font-size: 2em;
+}
+
+/*
+Buttons
+*/
+
+.introduction .buttons
+{
+    color: white;
+    text-align: center;
+    margin-top: 1em;
+}
+
+
+
+
 
 
 
